[gd_scene load_steps=2 format=2]

[ext_resource path="res://editor/LightEditor.gd" type="Script" id=1]

[node name="LightEditor" type="VBoxContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 322.0
margin_bottom = 494.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnergyEditor" type="HBoxContainer" parent="."]
margin_right = 318.0
margin_bottom = 16.0

[node name="Label" type="Label" parent="EnergyEditor"]
margin_top = 1.0
margin_right = 42.0
margin_bottom = 15.0
text = "Energy"

[node name="HSlider" type="HSlider" parent="EnergyEditor"]
margin_left = 46.0
margin_right = 318.0
margin_bottom = 16.0
size_flags_horizontal = 3
min_value = 0.1
max_value = 10.0
step = 0.1
value = 1.0

[node name="HSeparator" type="HSeparator" parent="."]
margin_top = 20.0
margin_right = 318.0
margin_bottom = 24.0

[node name="ColorPicker" type="ColorPicker" parent="."]
margin_top = 28.0
margin_right = 318.0
margin_bottom = 490.0
[connection signal="value_changed" from="EnergyEditor/HSlider" to="." method="_on_energy_value_changed"]
[connection signal="color_changed" from="ColorPicker" to="." method="_on_ColorPicker_color_changed"]
